fix no-search cutoff

--- a/app/assets/stylesheets/api/splash.scss
+++ b/app/assets/stylesheets/api/splash.scss
@@ -122,6 +122,7 @@
     p{
         font-size: x-large;
         font-family: Arial, Helvetica, sans-serif;
+        padding-bottom: 0.3em;
     }
     img{
         width: 100%;
